--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
 <head>
   <link rel="stylesheet" src="//normalize-css.googlecode.com/svn/trunk/normalize.css" />
   <link rel="stylesheet" href="css/styles.css">
+  <link rel="stylesheet" media="screen and (max-width: 600px)" href="css/smallscreen.css">
+  <link rel="stylesheet" media="screen and (min-width: 307px) and (max-width: 900px)" href="css/midscreen.css">
+  <link rel="stylesheet" media="screen and (min-width: 901px)" href="css/widescreen.css">
   <title>Restaurant Reviews</title>
 </head>
 
