--- a/restaurant.html
+++ b/restaurant.html
@@ -6,6 +6,9 @@
   <link rel="stylesheet" src="//normalize-css.googlecode.com/svn/trunk/normalize.css" />
   <!-- Main CSS file -->
   <link rel="stylesheet" href="css/styles.css" type="text/css">
+  <link rel="stylesheet" media="screen and (max-width: 600px)" href="css/smallscreen.css">
+  <link rel="stylesheet" media="screen and (min-width: 307px) and (max-width: 900px)" href="css/midscreen.css">
+  <link rel="stylesheet" media="screen and (min-width: 901px)" href="css/widescreen.css">
   <title>Restaurant Info</title>
 </head>
 
